// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button-group with btnActiveLevel 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="type"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  选项
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--warning cxd-Button--size-default cxd-ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--primary cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--light cxd-Button--size-default"
              type="button"
            >
              <span>
                Option C
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with tiled 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-ButtonGroup--tiled cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with vertical 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-ButtonGroup--vertical cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--primary cxd-Button--size-default cxd-ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--primary cxd-Button--size-default cxd-ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--primary cxd-Button--size-default cxd-ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 3`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--primary cxd-Button--size-default cxd-ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group-select 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  单选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ButtonGroup cxd-Form-control"
          >
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
